--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask>=0.12,<1.0
-Flask-Cors>=3.0,<3.1
-psycopg2>=2.7,<2.8
-python-dotenv>=0.8<1.0
-tenacity>=4.12.<5.0
-geojson>=2.4<3.0
+Flask>=1.0.2
+Flask-Cors>=3.0.7
+psycopg2>=2.8.2
+python-dotenv>=0.10.1
+geojson>=2.4.1
+wrap-connection>=1.0.0.2
